--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.3.19",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
