--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
 VITE_APP_BITLY=f725588c6ebf943005244e66a8f6f31c56650b1d
 VITE_APP_URL=https://api-ssl.bitly.com/v4/shorten
+
+# firebase
+VITE_APP_FIREBASE_ID=AIzaSyDun2m8OGnzJ7fbCyqevQ6PKA0-9Mk01lY
+VITE_APP_AUTH_DOMAIN=utility-hub-4bce9.firebaseapp.com
+VITE_APP_PROJECT_ID=utility-hub-4bce9
+VITE_APP_STORAGE_BUCKET=utility-hub-4bce9.appspot.com
+VITE_APP_MESSAGE_SENDER_ID=1025670793131
+VITE_APP_APP_ID=1:1025670793131:web:0f61619460f73e0a6974ee
+VITE_APP_MEASUREMENT_ID=G-L299ZSTGKS
