--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "axios": "^1.7.2",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.12.5",
     "framer-motion": "^11.3.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.26.0",
+    "react-toast": "^1.0.3",
     "three": "^0.167.1",
     "vanta": "^0.5.24"
   },
