--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,25 @@
 {
-    "name": "My PWA",
-    "short_name": "PWA",
-    "description": "My awesome Progressive Web App!",
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
-    "display": "standalone",
-    "scope": "/",
-    "start_url": "/",
-    "icons": []
-  }
-  
+  "short_name": "MyApp",
+  "name": "My Progressive Web App",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
+}
