--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MyApp",
-  "name": "My Progressive Web App",
+  "short_name": "Utility",
+  "name": "Utility Hub",
   "icons": [
     {
       "src": "favicon.ico",
